--- a/FeFoodie/src/index.css
+++ b/FeFoodie/src/index.css
@@ -10,5 +10,6 @@
 }
 
 body{
-  background-color: #1f2937;
+  --tw-bg-opacity: 1;
+        background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
